--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -26,3 +26,12 @@ a {
     color: var(--primary);
     text-decoration: none;
 }
+
+.line {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    &_block {
+        display: block;
+    }
+  }
