--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,6 @@
 :root {
-    --primary: #6979f8;
-    --primary-hover: #A5AFFB;
+    --primary: #3333CC;
+    --primary-hover: #6699FF;
     --second: #BE52F2;
     --second-hover: #DBA5F5;
     --success: #00C48C;
