feat(components): ProgressBar

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,10 +1,10 @@
 :root {
-    --primary: #3333CC;
-    --primary-hover: #6699FF;
+    --primary: #996699;
+    --primary-hover: #d6a8d6;
     --second: #BE52F2;
     --second-hover: #DBA5F5;
-    --success: #00C48C;
-    --success-hover: #7DDFC3;
+    --success: #6666FF;
+    --success-hover:  #abc5f9;
     --info: #0084F4;
     --info-hover: #66B5F8;
     --warning: #FFA26B;
